Update CHANGELOG.md and package.json
This commit updates the CHANGELOG.md file with a new version and adds a patch change. It also updates the package.json file by changing the version number and the license.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "changeset",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "poc changeset",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "private": false,
   "dependencies": {
+    "@changesets/cli": "^2.27.7",
     "generate-gitignore": "^0.2.6"
   }
 }
