Update package.json version to 1.0.16

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,14 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    types: opened
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions:
   contents: write
   pull-requests: write
-  packages: write
 
 jobs:
   release:
